--- a/join.html
+++ b/join.html
@@ -12,6 +12,9 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabarito">
 
+      <!-- favicon -->
+      <link rel="icon" href="images/favicon .jpeg">
+
     <title>Michigan Athletes in Tech</title>
 </head>
 
