--- a/join.html
+++ b/join.html
@@ -61,6 +61,11 @@
 
     </nav>
 
+    <div class = "joinGrid">
+      <!-- <h1> Come Join Our Community!</h1> -->
+      <p> Join Michigan Athletes in Tech, a club dedicated to supporting collegiate athletes pursuing careers in technology! To become a part of our community, simply complete the form below, and you'll be included in our email updates. For any inquiries, don't hesitate to connect with us on LinkedIn. We look forward to welcoming you! </p>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRvIivu5l-CQi1hc_vMAOsYcF8iMuShrXsS94ehzVzF_r_OQ/viewform?embedded=true" width = "" height = "850px" frameborder = "0" >Loading…</iframe>
+    </div>
     
 </body>
 </html>
