--- a/leaders.html
+++ b/leaders.html
@@ -100,6 +100,19 @@
              <br>
                 <p>Bera's diverse perspective and rich professional experience make him an invaluable asset to our club. Join us and tap into the wealth of knowledge and connections that Bera brings, as we explore the intersection of athletics, technology, and real-world problem-solving.</p>
          </div>
+
+        <a href = "https://www.linkedin.com/in/zachary-granados/"> <img src = "images/Headshot.JPG" class = headshot></a>
+        <h2> Zachary Granados </h2>
+        <h3> Director of Technology </h3>
+
+        <div class = "bio">
+
+ <p> Meet Zachary Granados, a sophomore and pommel horse specialist on the Michigan Men’s Gymnastics team. Currently pursuing a degree in Information Analysis with a minor in Statistics and Computer science. Zachary is driven by a passion for leveraging data to make informed decisions and his ultimate career goal is in the realm of sports data analytics.</p>
+<br>
+
+<p>Beyond his athletic pursuits, Zachary is deeply passionate about the potential of technology to enhance our lives. As the creator of this website, he has infused his enthusiasm for tech innovation into every aspect, providing a platform for like-minded individuals to connect and explore opportunities together. Zachary aspires to channel his tech enthusiasm into a career that drives innovation for a better world. If you share his passion for innovation and are eager to make a positive impact, he invites you to connect and explore the exciting possibilities within our club. Join us on this journey where technology meets athletics, and together, we shape a future of innovation and positive change.</p>
+
+</div>
        
  </div>
 
