--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
 <body>
 
     <nav>
+      <a href = "#main" class = "desktopSkip" tabindex="1"> Skip to Main Content</a>
         <div id = "desktop">
             <ul>
                 <li> <a href = "index.html"> Home </a></li>
@@ -67,7 +68,7 @@
      <div class = "background">
          <div class = "mission">
              <h1> Our Core Mission </h1>
-             <p>Founded in 2022, our organization is committed to assisting athletes as they prepare for rewarding careers in the tech industry. Drawing on our own experiences as collegiate athletes, we recognize the unique challenges of navigating the tech recruitment landscape while balancing the demands of athletic commitments. At our core, we aim to bridge the gap by bringing industry professionals directly to our members.</p>
+             <p id = "main">Founded in 2022, our organization is committed to assisting athletes as they prepare for rewarding careers in the tech industry. Drawing on our own experiences as collegiate athletes, we recognize the unique challenges of navigating the tech recruitment landscape while balancing the demands of athletic commitments. At our core, we aim to bridge the gap by bringing industry professionals directly to our members.</p>
          <br>
              <p>Our mission goes beyond mere support – we are dedicated to facilitating the achievement of our peers' goals within the tech sector. To ensure comprehensive assistance, we provide access to a range of valuable resources. From engaging resume workshops to in-depth lessons on data structures and algorithms, as well as realistic mock interviews, we strive to equip our fellow athletes with the skills and knowledge they need for success in the dynamic tech landscape. Join us as we empower individuals to not only excel in their athletic pursuits but also thrive in the ever-evolving tech industry.</p>
          </div>
@@ -77,14 +78,13 @@
 
      <div class = "scroll"> 
 
- 
         <img src = "images/google.png" alt = "MAI Tech meeting with Google">
         <img src = "images/GooglePoster.jpeg" alt = "Old Flyer for our meeting with Google">
         <img src = "images/Microsoft logo.png" alt = "Microsoft Logo">
         <img src = "images/DCSA-Seal.png" alt = "seal of the DCSA">
      </div>
 
-         <div class = "year2022">
+         <div class = "year2022" tabindex="0">
     
              <p>Explore a year of enriching experiences with our club as we delve into the heart of the tech industry. Throughout the past year, we've curated an array of engaging sessions and unique opportunities, connecting our members with seasoned professionals to foster personal and professional growth.</p>
              <br>
