--- a/join.html
+++ b/join.html
@@ -21,6 +21,7 @@
 <body>
 
     <nav>
+      <a href = "#main" class = "desktopSkip" tabindex="1"> Skip to Main Content</a>
         <div id = "desktop">
             <ul>
                 <li> <a href = "index.html"> Home </a></li>
@@ -64,8 +65,14 @@
     <div class = "joinGrid">
       <!-- <h1> Come Join Our Community!</h1> -->
       <p> Join Michigan Athletes in Tech, a club dedicated to supporting collegiate athletes pursuing careers in technology! To become a part of our community, simply complete the form below, and you'll be included in our email updates. For any inquiries, don't hesitate to connect with us on LinkedIn. We look forward to welcoming you! </p>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRvIivu5l-CQi1hc_vMAOsYcF8iMuShrXsS94ehzVzF_r_OQ/viewform?embedded=true" width = "" height = "850px" frameborder = "0" >Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRvIivu5l-CQi1hc_vMAOsYcF8iMuShrXsS94ehzVzF_r_OQ/viewform?embedded=true" width = "" height = "850px" frameborder = "0" id = "main">Loading…</iframe>
     </div>
-    
+  
+
+    <div class = 'footer'>
+      <a href = "https://www.linkedin.com/company/mai-tech/about/?viewAsMember=true" aria-label="Link to our linkedIn page"> Connect with Us on LinkedIn     |  </a>
+   <p> Created by Zachary Granados, 2023</p>
+  
+  </div>
 </body>
 </html>
