--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <title>Michigan Athletes in Tech</title>
 </head>
 
-<body>
+<body class = "page-container">
 
     <nav>
       <a href = "#main" class = "desktopSkip" tabindex="1"> Skip to Main Content</a>
@@ -76,7 +76,7 @@
      
      <h2> 2022-2023: </h2>
 
-     <div class = "scroll"> 
+     <div class = "scroll" tabindex="0"> 
 
         <img src = "images/google.png" alt = "MAI Tech meeting with Google">
         <img src = "images/GooglePoster.jpeg" alt = "Old Flyer for our meeting with Google">
