--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Michigan Athletes in Tech</title>
 </head>
 
-<body>
+<body class = "page-container">
 
     <nav>
       <a href = "#main" class = "desktopSkip" tabindex="1"> Skip to Main Content</a>
@@ -115,7 +115,7 @@
 
     </div>
    
-    <div class = 'footer' id = "home">
+    <div class = 'footer'>
       <a href = "https://www.linkedin.com/company/mai-tech/about/?viewAsMember=true" aria-label="Link to our linkedIn page"> Connect With Us On LinkedIn | </a>
       <p> Created by Zachary Granados, 2023</p>
     
