--- a/join.html
+++ b/join.html
@@ -18,7 +18,7 @@
     <title>Michigan Athletes in Tech</title>
 </head>
 
-<body>
+<body class = "page-container">
 
     <nav>
       <a href = "#main" class = "desktopSkip" tabindex="1"> Skip to Main Content</a>
